# scientisst-sense-firmware

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  bt_test.py  cenas_relatorio.txt  get_idf.bat  get_idf.sh  performance_results.txt  scientisst-firmware.py  sdkconfig  sdkconfig.defaults  sdkconfig.old  sdkconfig_new_old  sdkconfig_old  update_version.sh
SDCardFileConverter/: sdcardfileconversion.py
arduino_termometro_and_BPM/lib/Adafruit-MLX90614-Library-master/: Adafruit_MLX90614.cpp
arduino_termometro_and_BPM/src/: main.cpp
docs/: SDCardBinaryFileFormat.md  StyleGuide.md
docs/How_to_flash_scientisst/: how_to_flash_a_scientisst.ipynb
docs/doxygen/html/: adc_8c.html  adc_8c__incl.map  adc_8c__incl.md5  adc_8h.html  adc_8h__dep__incl.map  adc_8h__dep__incl.md5  adc_8h__incl.map  adc_8h__incl.md5  adc_8h_source.html  annotated.html  ble_8c.html  ble_8c__incl.map  ble_8c__incl.md5  ble_8h.html  ble_8h__dep__incl.map  ble_8h__dep__incl.md5  ble_8h_source.html  bt_8c.html  bt_8c__incl.map  bt_8c__incl.md5  bt_8h.html  bt_8h__dep__incl.map  bt_8h__dep__incl.md5  bt_8h__incl.map  bt_8h__incl.md5  bt_8h_source.html  classes.html  com_8c.html  com_8c__incl.map  com_8c__incl.md5  com_8h.html  com_8h__dep__incl.map  com_8h__dep__incl.md5  com_8h__incl.map  com_8h__incl.md5  com_8h_source.html  config_8h.html  config_8h__dep__incl.map  config_8h__dep__incl.md5  config_8h__incl.map  (+147 more)
docs/doxygen/latex/: adc_8c.tex  bt_8c.tex  (+122 more)
examples/: arduino_bt.cpp  controller_hci_uart_demo.c  forum_example.c  spi_master_example_main.c
main/: CMakeLists.txt  Kconfig  adc.c  adc.h  ble.c  ble.h  bt.c  bt.h  com.c  com.h  config.h  doxygen_config_file  frame.c  frame.h  gpio.c  gpio.h  i2c.c  i2c.h  imu.c  imu.h  macros.h  macros_conf.h  main.c  main.h  sci_config.h  sci_macros.h  sci_macros_conf.h  sci_scientisst.c  sci_scientisst.h  sci_version.h  scientisst-firmware.c  scientisst-firmware.h  scientisst.c  scientisst.h  sd_card.c  sd_card.h  spi.c  spi.h  tcp.c  tcp.h  (+13 more)
main/certs/: cacert.pem  prvtkey.pem
main/communication/: sci_ble.c  sci_bt.c  sci_com.c  sci_sd_card.c  sci_tcp.c  sci_tcp_and_serial.c  sci_udp.c  sci_ws.c
main/communication/include/: sci_ble.h  sci_bt.h  sci_com.h  sci_sd_card.h  sci_tcp.h  sci_tcp_and_serial.h  sci_udp.h  sci_ws.h
main/communication/wifi_rest_server/: sci_wifi_rest_server.c  sci_wifi_rest_server.h
main/drivers/: sci_gpio.c  sci_serial.c  sci_timer.c  sci_wifi.c
main/drivers/include/: sci_gpio.h  sci_serial.h  sci_timer.h  sci_wifi.h
main/peripherals/: sci_adc_external.c  sci_adc_internal.c
main/peripherals/include/: sci_adc_external.h
main/sensors/: bno055.c  sci_adc_external.c  sci_adc_internal.c
main/sensors/include/: bno055.h  sci_adc_external.h  sci_adc_internal.h
main/tasks/: sci_task_acquisition_sdcard.c  sci_task_aquisition.c  sci_task_battery_monitor.c  sci_task_com_rx.c  sci_task_com_tx.c  sci_task_imu.c
main/tasks/include/: sci_task_acquisition_sdcard.h  sci_task_aquisition.h  sci_task_battery_monitor.h  sci_task_com_rx.h  sci_task_com_tx.h  sci_task_imu.h
report/: conference_101719.aux  conference_101719.bbl  conference_101719.blg  conference_101719.fdb_latexmk  conference_101719.fls  conference_101719.tex
uBio_Firmware/: Makefile  sdkconfig
uBio_Firmware/main/: adc.c  adc.h  bitalino-functions.c  bitalino-functions.h  bootwifi.c  bootwifi.h  gpio.c  gpio.h  main.c  pwm.c  pwm.h  spi_adc.c  spi_adc.h  spi_master_nodma.c  tasks.c  tasks.h  tcp.c  tcp.h  timer.c  timer.h
www/: index.html  settings_done.html
(+62 files in other folders)
